--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "spectacle": "5.4.0",
     "spectacle-code-slide": "^0.5.2",
     "spectacle-renderer": "^0.0.3",
-    "styled-components": "^4.1.3",
+    "styled-components": "4.3.2",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
